--- a/platformio.ini
+++ b/platformio.ini
@@ -1,13 +1,3 @@
-; PlatformIO Project Configuration File
-;
-;   Build options: build flags, source filter
-;   Upload options: custom upload port, speed and extra flags
-;   Library options: dependencies, extra library storages
-;   Advanced options: extra scripting
-;
-; Please visit documentation for the other options and examples
-; https://docs.platformio.org/page/projectconf.html
-
 [common]
 default_envs = yolo_uno
 
@@ -17,31 +7,28 @@ board = yolo_uno
 framework = arduino
 monitor_speed = 115200
 upload_speed = 115200
-build_unflags = -std=gnu++11
-build_flags = 
-	-DELEGANTOTA_USE_ASYNC_WEBSERVER=1
-	-std=gnu++17
+
+build_flags =
+    -DELEGANTOTA_USE_ASYNC_WEBSERVER=1
+    -std=gnu++11
 
 lib_compat_mode = strict
-lib_deps = 
+lib_deps =
     adafruit/DHT sensor library @ ^1.4.6
-	dfrobot/DFRobot_DHT20@^1.0.0
-	ericksimoes/Ultrasonic@^3.0.0
-	adafruit/Adafruit NeoPixel@^1.15.1
-	iakop/LiquidCrystal_I2C_ESP32@^1.1.6
-	me-no-dev/AsyncTCP@^1.1.1
-	me-no-dev/ESPAsyncWebServer@^1.2.3
-	bblanchon/ArduinoJson@^7.1.0
-	adafruit/Adafruit Unified Sensor@^1.1.15
-	https://github.com/ayushsharma82/ElegantOTA
-	mobizt/ESP-Google-Sheet-Client@^1.4.9
-	ESP32SSLClient
-	mobizt/FirebaseClient@^2.1.5
-	mobizt/ESP Mail Client@^3.4.24
-	mobizt/Firebase Arduino Client Library for ESP8266 and ESP32@^4.4.17
-lib_extra_dirs = 
-	lib
-	lib/Utils
+    dfrobot/DFRobot_DHT20@^1.0.0
+    ericksimoes/Ultrasonic@^3.0.0
+    adafruit/Adafruit NeoPixel@^1.15.1
+    iakop/LiquidCrystal_I2C_ESP32@^1.1.6
+    https://github.com/me-no-dev/AsyncTCP.git
+    https://github.com/me-no-dev/ESPAsyncWebServer.git
+    bblanchon/ArduinoJson@^7.1.0
+    adafruit/Adafruit Unified Sensor@^1.1.15
+    https://github.com/ayushsharma82/ElegantOTA
+    tanakamasayuki/TensorFlowLite_ESP32@1.0.0
+
+lib_extra_dirs =
+    lib
+    lib/Utils
 lib_ldf_mode = deep
 board_build.filesystem = littlefs
 board_build.partitions = default_16MB.csv
